# prompt-image-tool

./: .gitignore  README.md  build.bat  capacitor.config.ts  compress_icon.py  dev.bat  package-lock.json  package.json  patch-java-version.ps1  plan.md  requirements.txt  start-dev.bat  start.bat  task_plan.md  vite.config.js  一键启动-服务器和网页.bat
.github/: copilot-instructions.md
UI设计稿/: 提示词管家_UI设计复刻文档.md
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
docs/: README.md  api-reference.md  apps-code-map.md  lan-sync-design-doc.md  mobile-technical-doc.md  optimization-plan.md  pc-technical-doc.md  ui-ux-design-doc.md  web-technical-doc.md  工程交接文档.md  版本发布与更新记录维护指南.md
docs/UI计划/: 00-全局设计规范.md  07-功能映射与迁移指南.md
docs/对话历史/: 构建安卓移动端安装包.md
docs/工程文档/: README.md  工程交接文档.md  工程目录说明.md  工程转移与依赖安装指南.md
docs/工程目录整理/: notes.md  task_plan.md  工程目录整理方案-260509.md  文档分类整理计划-260510.md
docs/已修复问题/: v2.3.0-PC端安装后无UI.md
docs/技术文档/: README.md  api-reference.md  lan-sync-design-doc.md  pc-technical-doc.md  (+2 more)
gpt本地档案馆工具/: ChatGPT Conversation Vault - CheeseTa Integrated-2026.05.24.10.user.js
installer-shell/: package.json
installer-shell/src-tauri/: Cargo.toml  tauri.conf.json
installer-shell/src-tauri/capabilities/: default.json
installer-shell/src-tauri/src/: main.rs
python/: main.py
scripts/: README.md  build_android_package.py  build_installer_shell_package.py  build_pc_package.py  build_release_packages.py  compress_icon.py  start_dev_server.py
src/: index.html  neu-button-demo.html
src-tauri/: Cargo.toml  tauri.conf.json
(+260 files in other folders)
