[package]
name = "prompt_image_manager_installer_shell"
version = "2.3.6"
description = "PromptImageManager installer shell"
authors = ["PromptImageManager"]
edition = "2021"
rust-version = "1.77.2"

[features]
embedded-installer = []

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.0", features = [] }
tauri-plugin-dialog = "2.7.1"
